# ros2-object-detection-cooperative

./: README.md  eval.yaml  verify_cooperative_perception.sh
src/cooperative_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/cooperative_perception/cooperative_perception/: __init__.py  encoder_node.py  fusion_node.py
src/cooperative_perception/launch/: cooperative_perception.launch.py
src/cooperative_perception/resource/: cooperative_perception
src/cooperative_perception_msgs/: CMakeLists.txt  package.xml
src/cooperative_perception_msgs/msg/: EncodedFeature.msg
src/lidar_object_detection/: setup.py
