<?xml version="1.0"?>
<package format="3">
  <name>cooperative_perception</name>
  <version>0.1.0</version>
  <description>ROS 2 nodes and messages for cooperative V2X perception using split PointPillar encoders and fusion.</description>
  <maintainer email="placeholder@example.com">OpenCOOD</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cooperative_perception_msgs</exec_depend>
  <exec_depend>object_detection_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

